Bug 99850 - [P1102R2] reject valid lambda syntax in C++23
Summary: [P1102R2] reject valid lambda syntax in C++23
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 11.0
: P3 normal
Target Milestone: ---
Assignee: Jakub Jelinek
URL:
Keywords: rejects-valid
Depends on:
Blocks:
 
Reported: 2021-03-31 16:39 UTC by 康桓瑋
Modified: 2021-04-16 07:36 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2021-03-31 00:00:00


Attachments
gcc11-pr99850.patch (729 bytes, patch)
2021-04-14 13:03 UTC, Jakub Jelinek
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description 康桓瑋 2021-03-31 16:39:30 UTC
https://godbolt.org/z/x5E5cGPTb

auto l = []<auto> requires true -> void {};

gcc incorrectly rejects this valid lambda, you can see more details in https://stackoverflow.com/questions/66833334/the-validity-of-lambda-expression-with-omitted-parameter-list-in-c23
Comment 1 Marek Polacek 2021-03-31 16:50:40 UTC
Confirmed.  I could take a look, unless Jakub wants it.
Comment 2 Jakub Jelinek 2021-03-31 19:43:51 UTC
Are you sure it is incorrectly rejected?
http://eel.is/c++draft/expr.prim.lambda.general
says:
 lambda-declarator:
   lambda-specifiers
   ( parameter-declaration-clause ) lambda-specifiers requires-clause[opt]
So in my reading, if requires-clause is present, the ()s are not optional.
Otherwise requires-clause[opt] would need to be in the lambda-specifiers non-terminal or present also after the first lambda-specifiers.
Comment 3 Jakub Jelinek 2021-03-31 19:54:56 UTC
Ah, but in lambda-expression: non-terminal there is another requires-clause[opt] after the < template-parameter-list >.
So we need to handle
auto l = []<class T> requires true (T t, int n) { };
But during parsing we have parsing of requires clause at that spot after >,
and when ()s are omitted, there is code to handle -> at that spot.
Comment 4 康桓瑋 2021-04-01 06:58:52 UTC
This ICE may be caused by not handle this form.

template <typename...> concept C = true;

auto l = []<typename... Ts> requires (C<Ts> && ...) -> void {};

https://godbolt.org/z/vo8xPd4hY

<source>:3:48: internal compiler error: Segmentation fault
    3 | auto l = []<typename... Ts> requires (C<Ts> && ...) -> void {};
      |                                                ^~~
0x1cfca39 internal_error(char const*, ...)
	???:0
0x940286 convert_generic_types_to_packs(tree_node*, int, int)
	???:0
0x8e126d c_parse_file()
	???:0
0xa60292 c_common_parse_file()
	???:0
Please submit a full bug report,
with preprocessed source if appropriate.
Comment 5 Jakub Jelinek 2021-04-14 13:03:49 UTC
Created attachment 50592 [details]
gcc11-pr99850.patch

Untested fix.
Comment 6 GCC Commits 2021-04-16 07:35:15 UTC
The master branch has been updated by Jakub Jelinek <jakub@gcc.gnu.org>:

https://gcc.gnu.org/g:784de5292c34e287c848b382b431599b818ea76e

commit r11-8210-g784de5292c34e287c848b382b431599b818ea76e
Author: Jakub Jelinek <jakub@redhat.com>
Date:   Fri Apr 16 09:34:26 2021 +0200

    c++: Fix up C++23 [] <...> requires primary -> type {} parsing [PR99850]
    
    The requires clause parsing has code to suggest users wrapping
    non-primary expressions in (), so if it e.g. parses a primary expression
    and sees it is followed by ++, --, ., ( or -> among other things it
    will try to reparse it as assignment expression or what and if that works
    suggests wrapping it inside of parens.
    When it is requires-clause that is after <typename T> etc. it already
    has an exception from that as ( can occur in valid C++20 expression there
    - starting the parameters of the lambda.
    In C++23 another case can occur, as the parameters with the ()s can be
    omitted, requires C can be followed immediately by -> which starts a
    trailing return type.  Even in that case, we don't want to parse that
    as C->...
    
    2021-04-16  Jakub Jelinek  <jakub@redhat.com>
    
            PR c++/99850
            * parser.c (cp_parser_constraint_requires_parens) <case CPP_DEREF>:
            If lambda_p, return pce_ok instead of pce_maybe_postfix.
    
            * g++.dg/cpp23/lambda-specifiers2.C: New test.
Comment 7 Jakub Jelinek 2021-04-16 07:36:22 UTC
Fixed.